<resources>
    <string name="app_name">Cheap Buy</string>
    <string name="action_settings">Settings</string>
    <string name="userName">UserName:</string>
    <string name="password">Password:</string>
    <string name="plus_sign">plusSign</string>
    <string name="imagebutton1">imageButton1</string>
    <string name="imagebutton2">imageButton2</string>
    <string name="imagebutton3">imageButton3</string>
    <string name="frame_1">frame_1</string>
    <string name="frame_2">frame_2</string>
    <string name="description">Description:</string>
    <string name="username_profile">User Name:</string>
    <string name="title_activity_buy_item2">BuyItem2</string>
    <string name="title_activity_password_input">PasswordInput</string>
    <string name="title_activity_chat_view">chat_view</string>
    <string name="title_activity_photo_shoot">PhotoShoot</string>
    <string name="title_activity_sell_interface">SellInterface</string>
    <string name="title_activity_account_setting">AccountSetting</string>
    <string name="defaultimage">defautImage</string>
    <string name="defaultname">Andy Wang</string>
    <string name="chat_frame">chat_frame</string>
    <string name="nametext">Name</string>
    <string name="pricetext">Price:</string>
    <string name="cameraclick">cameraclick</string>
    <string name="sendclick">sendclick</string>
    <string name="frame_3">frame_3</string>
    <string name="enterButton">Enter</string>
    <string name="title_activity_name_setting">NameSetting</string>
    <string name="nameinputtext">Please input your name below:</string>
    <string name="nameInput">Name</string>
    <string name="completeText">Complete</string>
    <string name="title_activity_password_setting">passwordSetting</string>
    <string name="passwordInstruction">If you decide to change password, type in below:</string>
    <string name="passwordInstructionTwice">Please type in again:</string>
    <string name="passwordDefault">*********</string>
    <string name="passwordText">Password:</string>
    <string name="upperframe">upperframe</string>
    <string name="accountText">Account</string>
    <string name="nameSettingText">Name Setting</string>
    <string name="passwordSettingText">Password Setting</string>
    <string name="photoShootText">Sell Your Item</string>
    <string name="buyInterfaceText">Buy Good Stuff</string>
    <string name="title_activity_sign_up_interface">SignUpInterface</string>
    <string name="signUpText">Sign Up</string>
    <string name="signuptext">SIGN UP</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item_display">ItemDisplay</string>
    <string name="buyitText">Buy It!</string>
    <string name="moreimageButton">More Image?</string>
    <string name="buyitButton">Buy It?</string>
    <string name="title_activity_discussion_and_buy">DiscussionAndBuy</string>
</resources>
