<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/plusSign"
        android:src="@drawable/plus_sign"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:contentDescription="@string/plus_sign"
        android:layout_above="@+id/frame_2"
        android:layout_alignLeft="@+id/frame_2"
        android:layout_alignStart="@+id/frame_2"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="45dp" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imagebutton1"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignTop="@+id/plusSign"
        android:layout_toRightOf="@+id/plusSign"
        android:layout_toEndOf="@+id/plusSign"
        android:layout_marginTop="-15dp"
        android:contentDescription="@string/imagebutton1" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imagebutton2"
        android:layout_marginStart="110dp"
        android:layout_alignTop="@+id/plusSign"
        android:layout_toRightOf="@+id/plusSign"
        android:layout_toEndOf="@+id/plusSign"
        android:layout_marginTop="-15dp"
        android:contentDescription="@string/imagebutton2"
         />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imagebutton3"
        android:layout_marginStart="200dp"
        android:layout_alignTop="@+id/plusSign"
        android:layout_toRightOf="@+id/plusSign"
        android:layout_toEndOf="@+id/plusSign"
        android:layout_marginTop="-15dp"
        android:contentDescription="@string/imagebutton3" />

    <ImageView
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:id="@+id/frame_1"
        android:src="@drawable/frame_1"
        android:contentDescription="@string/frame_1"
        android:layout_above="@+id/frame_2"
        android:layout_alignLeft="@+id/frame_2"
        android:layout_alignStart="@+id/frame_2"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:layout_width="360dp"
        android:layout_height="220dp"
        android:id="@+id/frame_2"
        android:src="@drawable/frame_2"
        android:contentDescription="@string/frame_2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionInput"
        android:inputType="textMultiLine"
        android:lines="6"
        android:gravity="top|left"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:layout_below="@+id/description"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/imagebutton3"
        android:layout_alignEnd="@+id/imagebutton3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description"
        android:id="@+id/description"
        android:layout_alignTop="@+id/frame_2"
        android:layout_alignLeft="@+id/descriptionInput"
        android:layout_alignStart="@+id/descriptionInput"
        android:layout_marginTop="25dp" />

    <!--
    <Spinner
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/category"
        android:entries="5"
        android:spinnerMode="dropdown"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/priceInput"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />
-->
    <ImageView
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:src="@drawable/frame_3"
        android:contentDescription="@string/frame_3"
        android:layout_below="@+id/frame_2"
        android:layout_alignLeft="@+id/frame_2"
        android:layout_alignStart="@+id/frame_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pricetext"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/imageView"
        android:layout_toLeftOf="@+id/imagebutton1"
        android:layout_toStartOf="@+id/imagebutton1"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/priceInput"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/description"
        android:layout_alignRight="@+id/imagebutton2"
        android:layout_alignEnd="@+id/imagebutton2"
        android:layout_marginTop="-10dp"
        android:inputType="number" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/cameraClick"
        android:src="@drawable/camera_icon"
        android:contentDescription="@string/cameraclick"
        android:clickable="true"
        android:layout_below="@+id/imageView"
        android:layout_toLeftOf="@+id/priceInput"
        android:layout_toStartOf="@+id/priceInput"
        android:layout_marginTop="25dp"
        android:onClick="cameraClick" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/sendClick"
        android:src="@drawable/send_icon"
        android:layout_alignBottom="@+id/cameraClick"
        android:layout_toRightOf="@+id/priceInput"
        android:layout_toEndOf="@+id/priceInput"
        android:contentDescription="@string/sendclick"
        android:clickable="true"
        android:onClick="backToMain" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64.5dp"
        android:id="@+id/imageView5"
        android:src="@drawable/upperframe"
        android:contentDescription="@string/upperframe"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/photoShootText"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp" />
</RelativeLayout>
