<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:id="@+id/passwordInput">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/personalInfoImage"
        android:layout_marginTop="131dp"
        android:src="@drawable/defalt_photo"
        android:contentDescription="@string/defaultimage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="takePhoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_profile"
        android:id="@+id/username_profile"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/personalInfoImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/defaultname"
        android:id="@+id/username_changeable"
        android:layout_alignBottom="@+id/username_profile"
        android:layout_alignLeft="@+id/personalInfoImage"
        android:layout_alignStart="@+id/personalInfoImage"
        android:onClick="pleaseInputName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordText"
        android:id="@+id/passwordText"
        android:layout_below="@+id/username_profile"
        android:layout_alignLeft="@+id/username_profile"
        android:layout_alignStart="@+id/username_profile"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordDefault"
        android:id="@+id/passwordDefault"
        android:layout_alignTop="@+id/passwordText"
        android:layout_alignLeft="@+id/username_changeable"
        android:layout_alignStart="@+id/username_changeable"
        android:clickable="true"
        android:onClick="passwordInputTrans" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64.5dp"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/upperframe"
        android:contentDescription="@string/upperframe"
        android:layout_marginTop="-5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accountText"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="20dp" />


</RelativeLayout>
