<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/nameInput">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nameinputtext"
        android:id="@+id/nameInputText"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="116dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nameInput"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/nameInputText"
        android:layout_alignLeft="@+id/nameInputText"
        android:layout_alignStart="@+id/nameInputText"
        android:layout_marginTop="39dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completeText"
        android:id="@+id/completeButton"
        android:onClick="GoBacktoAccountSetting"
        android:layout_marginTop="113dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64.5dp"
        android:id="@+id/imageView7"
        android:src="@drawable/upperframe"
        android:contentDescription="@string/upperframe"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nameSettingText"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp" />
</RelativeLayout>
