<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/passwordSettingInterface">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordInstruction"
        android:id="@+id/passwordInstruction"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInputFirst"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/passwordInstruction"
        android:layout_alignLeft="@+id/passwordInstruction"
        android:layout_alignStart="@+id/passwordInstruction"
        android:editable="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordInstructionTwice"
        android:id="@+id/passwordInstructionTwice"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/passwordInputFirst"
        android:layout_alignLeft="@+id/passwordInputFirst"
        android:layout_alignStart="@+id/passwordInputFirst"
        android:editable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInputTwice"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/passwordInstructionTwice"
        android:layout_alignLeft="@+id/passwordInstructionTwice"
        android:layout_alignStart="@+id/passwordInstructionTwice"
        android:editable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completeText"
        android:id="@+id/completeButtonPassword"
        android:layout_below="@+id/passwordInputTwice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:clickable="true"
        android:onClick="GoBacktoAccountSettingPassword" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64.5dp"
        android:id="@+id/imageView6"
        android:src="@drawable/upperframe"
        android:contentDescription="@string/upperframe"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/passwordSettingText"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp" />
</RelativeLayout>
