<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/buyitButton">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64.5dp"
        android:id="@+id/imageView10"
        android:src="@drawable/upperframe"
        android:contentDescription="@string/upperframe"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/buyitText"
        android:id="@+id/textView13"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/imageView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageDisplay" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moreimageButton"
                android:layout_below="@+id/imageDisplay"

                android:id="@+id/moreImageButton"
                android:clickable="true"
                android:onClick="moreImageFunction" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyitButton"
                android:layout_toRightOf="@id/moreImageButton"

                android:id="@+id/buyItButton"
                android:onClick="buyItFunction"
                android:clickable="true"
                android:layout_marginLeft="25dp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
