<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_password_input"
    tools:context="com.example.andy.cheapbuy.PasswordInput"
    android:background="@drawable/background_password"
    android:id="@+id/passwordInputID">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:layout_marginBottom="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/usernameInput"
        android:layout_alignStart="@+id/usernameInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameInput"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/passwordInput"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userName"
        android:id="@+id/textView"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_alignBottom="@+id/usernameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/passwordInput"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterButton"
        android:id="@+id/enterButton"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="enterMain"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/passwordInput"
        android:layout_alignEnd="@+id/passwordInput"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signuptext"
        android:id="@+id/signupButton"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="gotoSignUp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:clickable="true" />


</RelativeLayout>
