<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/signupInterfaceId">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64.5dp"
        android:id="@+id/imageView9"
        android:src="@drawable/upperframe"
        android:contentDescription="@string/upperframe"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signUpText"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userName"
        android:id="@+id/textView10"
        android:textStyle="bold"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/imageView9"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/signupUsername"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/singupPasswordInput"
        android:layout_alignStart="@+id/singupPasswordInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/textView11"
        android:textStyle="bold"
        android:layout_below="@+id/signupUsername"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/singupPasswordInput"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/signupRepeat"
        android:layout_alignStart="@+id/signupRepeat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Repeat Your Password"
        android:id="@+id/textView12"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signupRepeat"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Complete"
        android:id="@+id/completeButton"
        android:layout_below="@+id/signupRepeat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:onClick="gotoMain" />
</RelativeLayout>
